--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "dev": "nodemon --env_file=.env app.js",
+    "start": "node app.js"
   },
   "author": "M Ahmad S",
   "license": "ISC",
