--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --env_file=.env app.js",
+    "dev": "nodemon --env-file=.env app.js",
     "start": "node app.js"
   },
   "author": "M Ahmad S",
@@ -14,7 +14,13 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.2",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^11.0.3"
   }
 }
