--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://dbuser:123@cluster0.ehg7s.mongodb.net/rent_it
-JWT_KEY=ahmad123
-ADMIN_ID=675ac0f71f33216b04b15b5a
+MONGODB_URI="mongodb+srv://dbuser:123@cluster0.ehg7s.mongodb.net/rent_it"
+JWT_KEY="ahmad123"
+ADMIN_ID="675ac0f71f33216b04b15b5a"
